Prevent "premium content" overflow

--- a/anatomy/static/sass/_overview.sass
+++ b/anatomy/static/sass/_overview.sass
@@ -123,6 +123,7 @@
   max-height: 45px
   display: none
   line-height: 1.1em
+  overflow: hidden
 
 .tile.disabled a.tile-link .top
   display: block
